# reduce-test-task

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  cpu_realization.cpp  cpu_realization.hpp  gpu_realization.c  gpu_realization.cpp  gpu_realization.h  gpu_realization.hpp  main.c  main.cpp  reduce.cl
